# follower_car

./: README.md
description2/: CMakeLists.txt  package.xml
description2/urdf/: adl200_description_lidar.urdf.xacro  gazebo_controller_skid.xacro  imu.xacro  laser.xacro  materials.xacro  robot_core.xacro  robot_rover.gazebo.xacro  robot_rover.urdf.xacro  sensor.xacro  wheels_macro.xacro
docs/manual_en/: Manual_Project_MultiRobot_EN.docx
docs/manual_es/: Manual_Project_MultiRobot_ES.docx
follower_car/: CMakeLists.txt  package.xml
follower_car_algorithm/: CMakeLists.txt  package.xml
follower_car_algorithm/scripts/: follower_car.py  follower_car_without_ns.py  follower_tb3_mod.py  follower_tb3_robotics.py
follower_rover/: CMakeLists.txt  package.xml
follower_rover/src/: follower.py  follower_2.py
lidar_navigation/: CMakeLists.txt  package.xml
lidar_navigation/config/: ekf_localization.yaml
lidar_navigation/launch/: acml.launch  ekf_localization.launch  lidar_navigation.launch  move_base.launch  start_map_server.launch
lidar_navigation/param/: costmap_common_params.yaml
main/: CMakeLists.txt  package.xml
main/config/: follower_config.rviz  main_config.rviz  navigation_config.rviz  one_navigation_config.rviz
main/launch/: display4.launch  display4_lidar.launch  gazebo_agriculture.launch  gazebo_empty.launch  gazebo_house.launch  gazebo_world.launch  multi_rover.launch  multi_rover_empty.launch  multi_rover_house.launch  multi_rover_house_pro.launch  multi_rover_world.launch  spawn_multi_rover.launch  spawn_rover.launch
main/models/cpr_agriculture/: model.config  model.sdf
main/models/house/: model.config
main/models/world/: model.config
main/worlds/: world.world
rover_slam/: CMakeLists.txt  package.xml
rover_slam/config/: rover_lds_2d.lua
rover_slam/launch/: map_gmapping.launch  slam.launch
rover_slam/rviz/: gmapping.rviz
