<?xml version="1.0"?>
<package format="2">
  <name>main</name>
  <version>0.0.0</version>
  <description>The main package</description>

  <maintainer email="iesusdavila@gmail.com">Iesus Davila</maintainer>
  <maintainer email="ricardoortizpozo@gmail.com">Ricardo Ortiz</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>description2</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
