<?xml version="1.0"?>
<package format="2">
  <name>rover_slam</name>
  <version>1.2.6</version>
  <description>
    The rover_slam package provides roslaunch scripts for starting the SLAM
  </description>

  <maintainer email="iesusdavila@gmail.com">Iesus Davila</maintainer>
  <maintainer email="ricardoortizpozo@gmail.com">Ricardo Ortiz</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
